fix: fixed invaders size on mobile

--- a/spaceinvaders/spaceinvaders.css
+++ b/spaceinvaders/spaceinvaders.css
@@ -188,7 +188,7 @@ label {
 }
 
 .invaders {
-  font-size: 15px;
+  font-size: 2cqw;
   width: 0.25em;
   height: 0.25em;
   animation: 1s infinite;
